update on ppreprocessing

--- a/query/i. setup/b. preprocess_in_python.ipynb
+++ b/query/i. setup/b. preprocess_in_python.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 163,
    "id": "8db50e75",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 164,
    "id": "acaa0859",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
        "4      German  Expressionist   1887   1914  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 165,
    "id": "25250360",
    "metadata": {},
    "outputs": [
@@ -255,6 +255,147 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f635b94c",
+   "metadata": {},
+   "source": [
+    "Change Museum hours to Time datatype."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "a676429a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ryana\\AppData\\Local\\Temp\\ipykernel_18284\\398318145.py:10: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  dict['museum_hours'][column_name] = pd.to_datetime(dict['museum_hours'][column_name], errors='coerce').dt.time\n",
+      "C:\\Users\\ryana\\AppData\\Local\\Temp\\ipykernel_18284\\398318145.py:10: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  dict['museum_hours'][column_name] = pd.to_datetime(dict['museum_hours'][column_name], errors='coerce').dt.time\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>346</th>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>18:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>17:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>323</th>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>18:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>222</th>\n",
+       "      <td>09:30:00</td>\n",
+       "      <td>17:15:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>19:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>17:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>17:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10:30:00</td>\n",
+       "      <td>17:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>09:00:00</td>\n",
+       "      <td>18:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>09:30:00</td>\n",
+       "      <td>17:30:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         open     close\n",
+       "346  10:00:00  18:00:00\n",
+       "37   10:00:00  17:00:00\n",
+       "323  10:00:00  18:00:00\n",
+       "222  09:30:00  17:15:00\n",
+       "162  10:00:00  19:00:00\n",
+       "91   10:00:00  17:00:00\n",
+       "68   10:00:00  17:00:00\n",
+       "4    10:30:00  17:30:00\n",
+       "170  09:00:00  18:00:00\n",
+       "52   09:30:00  17:30:00"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def change_to_time(column_name):\n",
+    "    # clean time format\n",
+    "    dict['museum_hours'][column_name] = dict['museum_hours'][column_name]\\\n",
+    "        .str.upper()\\\n",
+    "        .str.replace(':AM','AM')\\\n",
+    "        .str.replace(':PM','PM')\\\n",
+    "        .str.replace(' ','')\n",
+    "\n",
+    "    #convert to time \n",
+    "    dict['museum_hours'][column_name] = pd.to_datetime(dict['museum_hours'][column_name], errors='coerce').dt.time\n",
+    "\n",
+    "change_to_time('open')\n",
+    "change_to_time('close')\n",
+    "\n",
+    "dict['museum_hours'][['open','close']].sample(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d05e0add",
    "metadata": {},
    "source": [
@@ -263,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 167,
    "id": "bb20d153",
    "metadata": {},
    "outputs": [
@@ -298,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 168,
    "id": "fa174cb7",
    "metadata": {},
    "outputs": [],
@@ -317,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 169,
    "id": "c8c94030",
    "metadata": {},
    "outputs": [
@@ -409,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 170,
    "id": "12334038",
    "metadata": {},
    "outputs": [],
