--- a/query/i. setup/b. preprocess_in_python.ipynb
+++ b/query/i. setup/b. preprocess_in_python.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 29,
    "id": "8db50e75",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 30,
    "id": "acaa0859",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
        "4      German  Expressionist   1887   1914  "
       ]
      },
-     "execution_count": 164,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 31,
    "id": "25250360",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 32,
    "id": "a676429a",
    "metadata": {},
    "outputs": [
@@ -271,9 +271,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ryana\\AppData\\Local\\Temp\\ipykernel_18284\\398318145.py:10: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\ryana\\AppData\\Local\\Temp\\ipykernel_23416\\398318145.py:10: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  dict['museum_hours'][column_name] = pd.to_datetime(dict['museum_hours'][column_name], errors='coerce').dt.time\n",
-      "C:\\Users\\ryana\\AppData\\Local\\Temp\\ipykernel_18284\\398318145.py:10: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\ryana\\AppData\\Local\\Temp\\ipykernel_23416\\398318145.py:10: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  dict['museum_hours'][column_name] = pd.to_datetime(dict['museum_hours'][column_name], errors='coerce').dt.time\n"
      ]
     },
@@ -304,54 +304,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>346</th>\n",
+       "      <th>241</th>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>16:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>214</th>\n",
        "      <td>10:00:00</td>\n",
        "      <td>18:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37</th>\n",
+       "      <th>294</th>\n",
        "      <td>10:00:00</td>\n",
        "      <td>17:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>323</th>\n",
+       "      <th>334</th>\n",
        "      <td>10:00:00</td>\n",
        "      <td>18:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>222</th>\n",
-       "      <td>09:30:00</td>\n",
-       "      <td>17:15:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>162</th>\n",
+       "      <th>321</th>\n",
        "      <td>10:00:00</td>\n",
-       "      <td>19:00:00</td>\n",
+       "      <td>21:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>10:00:00</td>\n",
-       "      <td>17:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>10:00:00</td>\n",
-       "      <td>17:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10:30:00</td>\n",
-       "      <td>17:30:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>170</th>\n",
+       "      <th>171</th>\n",
        "      <td>09:00:00</td>\n",
        "      <td>18:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>09:30:00</td>\n",
-       "      <td>17:30:00</td>\n",
+       "      <th>197</th>\n",
+       "      <td>11:00:00</td>\n",
+       "      <td>18:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>11:00:00</td>\n",
+       "      <td>18:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>231</th>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>17:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>209</th>\n",
+       "      <td>11:00:00</td>\n",
+       "      <td>16:00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -359,19 +359,19 @@
       ],
       "text/plain": [
        "         open     close\n",
-       "346  10:00:00  18:00:00\n",
-       "37   10:00:00  17:00:00\n",
-       "323  10:00:00  18:00:00\n",
-       "222  09:30:00  17:15:00\n",
-       "162  10:00:00  19:00:00\n",
-       "91   10:00:00  17:00:00\n",
-       "68   10:00:00  17:00:00\n",
-       "4    10:30:00  17:30:00\n",
-       "170  09:00:00  18:00:00\n",
-       "52   09:30:00  17:30:00"
+       "241  10:00:00  16:30:00\n",
+       "214  10:00:00  18:00:00\n",
+       "294  10:00:00  17:00:00\n",
+       "334  10:00:00  18:00:00\n",
+       "321  10:00:00  21:00:00\n",
+       "171  09:00:00  18:00:00\n",
+       "197  11:00:00  18:00:00\n",
+       "12   11:00:00  18:00:00\n",
+       "231  10:00:00  17:00:00\n",
+       "209  11:00:00  16:00:00"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,6 +396,54 @@
   },
   {
    "cell_type": "markdown",
+   "id": "44ca138b",
+   "metadata": {},
+   "source": [
+    "### Standardize format"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45f94af4",
+   "metadata": {},
+   "source": [
+    "Day in museum_hours contains typo (Thusday)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "28d71585",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thusday', 'Friday',\n",
+       "       'Saturday', 'Thursday'], dtype=object)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict['museum_hours'].day.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a02a2076",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict['museum_hours'].day = dict['museum_hours'].day.str.replace('Thusday','Thursday')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d05e0add",
    "metadata": {},
    "source": [
@@ -404,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 35,
    "id": "bb20d153",
    "metadata": {},
    "outputs": [
@@ -413,7 +461,13 @@
      "output_type": "stream",
      "text": [
       "artist :  0\n",
-      "canvas_size :  0\n",
+      "canvas_size :  0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "image_link :  60\n",
       "museum :  0\n",
       "museum_hours :  1\n",
@@ -439,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 36,
    "id": "fa174cb7",
    "metadata": {},
    "outputs": [],
@@ -458,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 37,
    "id": "c8c94030",
    "metadata": {},
    "outputs": [
@@ -550,12 +604,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "id": "12334038",
    "metadata": {},
    "outputs": [],
    "source": [
-    "connection_string = 'postgresql://postgres:gelo120601@localhost/painting'\n",
+    "username = 'postgres'\n",
+    "password = 'pass123'\n",
+    "\n",
+    "connection_string = f'postgresql://{username}:{password}@localhost/painting'\n",
     "db = create_engine(connection_string)\n",
     "conn = db.connect()\n",
     "\n",
